feat(api): implement latest source and artifact RFC
